--- a/v1/musics/nancy_tries_to_take_the_night.html
+++ b/v1/musics/nancy_tries_to_take_the_night.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
       <tbody>
         <tr>
           <td>
-            <a href="/index.html">👈 Voltar</a>
+            <a href="../index.html">👈 Voltar</a>
           </td>
         </tr>
       </tbody>
