fix: change all paths to relative, since github pages are hosted under path /musica

--- a/v1/musics/blues.html
+++ b/v1/musics/blues.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr>
           <td>
-            <img width="250px" src="/assets/blues.jpg" />
+            <img width="250px" src="../../assets/blues.jpg" />
           </td>
           <td>
             <font color="#ffca08" size="5"
@@ -39,7 +39,7 @@
                     />
                   </td>
                   <td>
-                    <audio src="/assets/blues.mp3" controls />
+                    <audio src="../../assets/blues.mp3" controls />
                   </td>
                 </tr>
               </tbody>
