--- a/v1/musics/look_down_on_us.html
+++ b/v1/musics/look_down_on_us.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr>
           <td>
-            <img width="250px" src="/assets/look_down.jpg" />
+            <img width="250px" src="../../assets/look_down.jpg" />
           </td>
           <td>
             <font color="#721a11" size="5"
@@ -39,7 +39,7 @@
                     />
                   </td>
                   <td>
-                    <audio src="/assets/look_down.mp3" controls />
+                    <audio src="../../assets/look_down.mp3" controls />
                   </td>
                 </tr>
               </tbody>
