--- a/v1/musics/nancy_tries_to_take_the_night.html
+++ b/v1/musics/nancy_tries_to_take_the_night.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr>
           <td>
-            <img width="250px" src="/assets/nancy.jpg" />
+            <img width="250px" src="../../assets/nancy.jpg" />
           </td>
           <td>
             <font color="#c72023" size="5"
@@ -43,7 +43,7 @@
                     />
                   </td>
                   <td>
-                    <audio src="/assets/nancy.mp3" controls />
+                    <audio src="../../assets/nancy.mp3" controls />
                   </td>
                 </tr>
               </tbody>
