--- a/v1/musics/second_sleep.html
+++ b/v1/musics/second_sleep.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr>
           <td>
-            <img width="250px" src="/assets/second_sleep.webp" />
+            <img width="250px" src="../../assets/second_sleep.webp" />
           </td>
           <td>
             <font color="#721a11" size="5"
@@ -39,7 +39,7 @@
                     />
                   </td>
                   <td>
-                    <audio src="/assets/second_sleep.mp3" controls />
+                    <audio src="../../assets/second_sleep.mp3" controls />
                   </td>
                 </tr>
               </tbody>
