--- a/v1/musics/sunglasses.html
+++ b/v1/musics/sunglasses.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr>
           <td>
-            <img width="250px" src="/assets/sunglasses.jpg" />
+            <img width="250px" src="../../assets/sunglasses.jpg" />
           </td>
           <td>
             <font color="#4f483e" size="5"
@@ -41,7 +41,7 @@
                     />
                   </td>
                   <td>
-                    <audio src="/assets/sunglasses.mp3" controls />
+                    <audio src="../../assets/sunglasses.mp3" controls />
                   </td>
                 </tr>
               </tbody>
