--- a/v2/index.html
+++ b/v2/index.html
@@ -63,7 +63,7 @@
           <div class="music__rank-place-container">
             <p class="music__rank-place">1</p>
             <img
-              src="/assets/blues.jpg"
+              src="../assets/blues.jpg"
               alt="Capa da música Blues (2024) de Gerogie Greep"
               class="music__cover"
             />
@@ -91,7 +91,7 @@
           <div class="music__rank-place-container">
             <p class="music__rank-place">2</p>
             <img
-              src="/assets/sunglasses.jpg"
+              src="../assets/sunglasses.jpg"
               alt="Capa da música Sunglasses (2021) de Black Country, New Road"
               class="music__cover"
             />
@@ -119,7 +119,7 @@
           <div class="music__rank-place-container">
             <p class="music__rank-place">3</p>
             <img
-              src="/assets/second_sleep.webp"
+              src="../assets/second_sleep.webp"
               alt="Capa da música Second Sleep (2025) de Magdalena Bay"
               class="music__cover"
             />
@@ -147,7 +147,7 @@
           <div class="music__rank-place-container">
             <p class="music__rank-place">4</p>
             <img
-              src="/assets/look_down.jpg"
+              src="../assets/look_down.jpg"
               alt="Capa da música Look Down on Us (2025) de Maruja"
               class="music__cover"
             />
@@ -175,7 +175,7 @@
           <div class="music__rank-place-container">
             <p class="music__rank-place">5</p>
             <img
-              src="/assets/nancy.jpg"
+              src="../assets/nancy.jpg"
               alt="Capa da música Nancy Tries to Take the Night (2025) de Black Country, New Road"
               class="music__cover"
             />
@@ -202,10 +202,10 @@
     </main>
 
     <footer class="footer">
-      <img class="footer__image" src="/assets/gifs/alien_pls.avif" />
-      <img class="footer__image" src="/assets/gifs/skeleton_pls.avif" />
-      <img class="footer__image" src="/assets/gifs/alien_pls2.avif" />
-      <img class="footer__image" src="/assets/gifs/liz_pls.avif" />
+      <img class="footer__image" src="../assets/gifs/alien_pls.avif" />
+      <img class="footer__image" src="../assets/gifs/skeleton_pls.avif" />
+      <img class="footer__image" src="../assets/gifs/alien_pls2.avif" />
+      <img class="footer__image" src="../assets/gifs/liz_pls.avif" />
     </footer>
   </body>
 </html>
