--- a/v3/index.html
+++ b/v3/index.html
@@ -9,7 +9,6 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Músicas</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
@@ -49,7 +48,7 @@
             <div class="p-5">
               <img
                 class="img-fluid rounded-circle"
-                src="/assets/blues.jpg"
+                src="../assets/blues.jpg"
                 alt="..."
               />
             </div>
@@ -59,7 +58,7 @@
               <h2 class="display-4">1. Blues</h2>
               <p>Gerogie Greep • 2024</p>
               <audio
-                src="/assets/blues.mp3"
+                src="../assets/blues.mp3"
                 controls
                 class="player__controls"
               ></audio>
@@ -77,7 +76,7 @@
             <div class="p-5">
               <img
                 class="img-fluid rounded-circle"
-                src="/assets/sunglasses.jpg"
+                src="../assets/sunglasses.jpg"
                 alt="..."
               />
             </div>
@@ -87,7 +86,7 @@
               <h2 class="display-4">2. Sunglasses</h2>
               <p>Black Country, New Road • 2021</p>
               <audio
-                src="/assets/sunglasses.mp3"
+                src="../assets/sunglasses.mp3"
                 controls
                 class="player__controls"
               ></audio>
@@ -105,7 +104,7 @@
             <div class="p-5">
               <img
                 class="img-fluid rounded-circle"
-                src="/assets/second_sleep.webp"
+                src="../assets/second_sleep.webp"
                 alt="..."
               />
             </div>
@@ -115,7 +114,7 @@
               <h2 class="display-4">3. Second Sleep</h2>
               <p>Magdalena Bay • 2025</p>
               <audio
-                src="/assets/second_sleep.mp3"
+                src="../assets/second_sleep.mp3"
                 controls
                 class="player__controls"
               ></audio>
@@ -133,7 +132,7 @@
             <div class="p-5">
               <img
                 class="img-fluid rounded-circle"
-                src="/assets/look_down.jpg"
+                src="../assets/look_down.jpg"
                 alt="..."
               />
             </div>
@@ -143,7 +142,7 @@
               <h2 class="display-4">4. Look Down on Us</h2>
               <p>Maruja • 2024</p>
               <audio
-                src="/assets/look_down.mp3"
+                src="../assets/look_down.mp3"
                 controls
                 class="player__controls"
               ></audio>
@@ -161,7 +160,7 @@
             <div class="p-5">
               <img
                 class="img-fluid rounded-circle"
-                src="/assets/nancy.jpg"
+                src="../assets/nancy.jpg"
                 alt="..."
               />
             </div>
@@ -171,7 +170,7 @@
               <h2 class="display-4">5. Nancy Tries to Take the Night</h2>
               <p>Black Country, New Road • 2025</p>
               <audio
-                src="/assets/nancy.mp3"
+                src="../assets/nancy.mp3"
                 controls
                 class="player__controls"
               ></audio>
@@ -185,10 +184,10 @@
     <footer class="py-5 bg-black">
       <div class="container px-5">
         <p class="m-0 text-center text-white small">Copyright 2025 &copy;</p>
-        <img class="footer__image" src="/assets/gifs/alien_pls.avif" />
-        <img class="footer__image" src="/assets/gifs/skeleton_pls.avif" />
-        <img class="footer__image" src="/assets/gifs/alien_pls2.avif" />
-        <img class="footer__image" src="/assets/gifs/liz_pls.avif" />
+        <img class="footer__image" src="../assets/gifs/alien_pls.avif" />
+        <img class="footer__image" src="../assets/gifs/skeleton_pls.avif" />
+        <img class="footer__image" src="../assets/gifs/alien_pls2.avif" />
+        <img class="footer__image" src="../assets/gifs/liz_pls.avif" />
       </div>
     </footer>
     <!-- Bootstrap core JS-->
