--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="/v1/index.html">Versão 1 (Apenas HTML)</a></li>
-      <li><a href="/v2/index.html">Versão 2 (HTML + CSS)</a></li>
-      <li><a href="/v3/index.html">Versão 3 (Template Bootstrap)</a></li>
+      <li><a href="v1/index.html">Versão 1 (Apenas HTML)</a></li>
+      <li><a href="v2/index.html">Versão 2 (HTML + CSS)</a></li>
+      <li><a href="v3/index.html">Versão 3 (Template Bootstrap)</a></li>
     </ul>
   </body>
 </html>
