--- a/v2/musics/blues.html
+++ b/v2/musics/blues.html
@@ -46,13 +46,13 @@
       <div class="player">
         <div class="player__cover">
           <img
-            src="/assets/blues.jpg"
+            src="../../assets/blues.jpg"
             alt="Player cover"
             class="player__cover-img"
           />
 
           <img
-            src="/assets/blues.jpg"
+            src="../../assets/blues.jpg"
             alt="Player cover"
             class="player__cover-img-blurred"
           />
@@ -64,7 +64,7 @@
         </div>
 
         <audio
-          src="/assets/blues.mp3"
+          src="../../assets/blues.mp3"
           controls
           class="player__controls"
         ></audio>
@@ -192,10 +192,10 @@
     </main>
 
     <footer class="footer">
-      <img class="footer__image" src="/assets/gifs/alien_pls.avif" />
-      <img class="footer__image" src="/assets/gifs/skeleton_pls.avif" />
-      <img class="footer__image" src="/assets/gifs/alien_pls2.avif" />
-      <img class="footer__image" src="/assets/gifs/liz_pls.avif" />
+      <img class="footer__image" src="../../assets/gifs/alien_pls.avif" />
+      <img class="footer__image" src="../../assets/gifs/skeleton_pls.avif" />
+      <img class="footer__image" src="../../assets/gifs/alien_pls2.avif" />
+      <img class="footer__image" src="../../assets/gifs/liz_pls.avif" />
     </footer>
   </body>
 </html>
