fix: change .mp3 file for /v2/second_sleep

--- a/v2/musics/second_sleep.html
+++ b/v2/musics/second_sleep.html
@@ -64,7 +64,7 @@
         </div>
 
         <audio
-          src="../../assets/sunglasses.mp3"
+          src="../../assets/second_sleep.mp3"
           controls
           class="player__controls"
         ></audio>
